--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Welcome to Kai's website!</h1>
+<h1 class='rainbow'>Welcome to Kai's website!</h1>
 <p>Hosted with <a href='https://pages.github.com/'> GitHub Pages</a></p>
 </body>
 </html>
