--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link rel='stylesheet' href='style.css'
 <body>
 <h1 class='rainbow'>Welcome to Kai's website!</h1>
 <p>Hosted with <a href='https://pages.github.com/'> GitHub Pages</a></p>
