--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel='stylesheet' href='style.css'>
   </head>
 <body>
-<h1 class='rainbow'>Welcome to Kai's website!</h1>
+<h1 class='rainbow'>Welcome to Jaden's website!</h1>
 <p>Hosted with <a href='https://pages.github.com/'> GitHub Pages</a></p>
 </body>
 </html>
