idk how to import

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 <body>
 <h1 class='rainbow'>Welcome to Jaden's website!</h1>
-<p>Hosted with <a href='https://pages.github.com/'> GitHub Pages</a></p>
+<p>Hosted with <a href='https://pages.github.com/'> GitHub Pages</a>
+i dont know how to import</p>
 </body>
 </html>
